--- a/Module 2/After/MyActorSystem/App.config
+++ b/Module 2/After/MyActorSystem/App.config
@@ -20,7 +20,7 @@
 							}
 						}
                   cluster {
-							seed-nodes = ["akka.tcp://MyActorSystem@localhost:4053"]
+							seed-nodes = ["akka.tcp://MyActorSystem@127.0.0.1:4053"]
 						}
 					}
 			]]>
