--- a/Module 3/3.Microservices/Globomantics/StatefulWorkers/StatefulWorkers.csproj
+++ b/Module 3/3.Microservices/Globomantics/StatefulWorkers/StatefulWorkers.csproj
@@ -81,7 +81,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewsStore.cs" />
+    <Compile Include="VideosWatchedStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
