Adjusting load timers, fixing naming, adding nr-of-instances to group router

--- a/Module 3/2.Clustered/Globomantics/Client/App.config
+++ b/Module 3/2.Clustered/Globomantics/Client/App.config
@@ -17,6 +17,7 @@
                         /api {
                            router = round-robin-group
                            routees.paths = ["/user/api"]
+                           nr-of-instances = 100
                            cluster {
 											enabled = on
 											max-nr-of-instances-per-node = 1
