--- a/Module 3/3.Microservices/Globomantics/Client/App.config
+++ b/Module 3/3.Microservices/Globomantics/Client/App.config
@@ -17,6 +17,7 @@
                         /api {
                            router = round-robin-group
                            routees.paths = ["/user/api"]
+                           nr-of-instances = 100
                            cluster {
 											enabled = on
 											max-nr-of-instances-per-node = 1
@@ -37,13 +38,6 @@
                   cluster {
                     seed-nodes = ["akka.tcp://globomantics@127.0.0.1:4053"]
                     roles = [client]
-                    role {
-                        # at least 1 of each role to operate
-                        statefulWorker.min-nr-of-members = 1
-                        statelessWorker.min-nr-of-members = 1
-                        lighthouse.min-nr-of-members = 1
-                        api.min-nr-of-members = 1
-                     }
                   }
                }
 			]]>
